<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3</name>
  <version>1.2.5</version>
  <description>
    Robot models
  </description>
  <license>Apache 2.0</license>
  <maintainer email="vyshnavdn@gmail.com">Vyshnav Davanagere</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
